# Scouting_America

./: .gitignore  README.md  Salary.java  employees.txt
3D_STL/: Animal_7.stl  Animal_8.stl
3D_Schematics/: Model.stl
Arduino/: arduino.ino
Arduino/Ring/: Ring.ino
Arduino/Servo/: Servo.ino
Arduino/Tone/: Tone.ino
Arduino/arduino/: arduino.ino
Example_Code/Arduino/Indiana_Jones/: Indiana_Jones.ino
Example_Code/Arduino/Ring/: Ring.ino
Example_Code/Arduino/Tester/: Tester.ino
Example_Code/Arduino/Ultrasonic/: Ultrasonic.ino
Example_Code/Generate_Employees/: first-names.txt  generate.py
Example_Code/Haskell/: average_age.hs
Example_Code/Java/: Salary.java
Example_Code/Python/: average_age.py
Generate_Employees/: Generator.cabal  generator.hs  last-names.txt
Generate_Employees/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Student_Code/Arduino/Indiana_Jones/: Indiana_Jones.ino
Student_Code/Arduino/Ring/: Ring.ino
Student_Code/Arduino/Servo/: Servo.ino
Student_Code/Arduino/Ultrasonic/: Ultrasonic.ino
Student_Code/Java/: Salary.java
Student_Code/Python/: average_age.py
