cabal-version:   3.0
name:            Generator
version:         0.1.0.0
license:         NONE
author:          Levi Johanon
maintainer:      ljohanon06@gmail.com
executable Generator
    ghc-options: -Wall
    build-depends: base, mwc-probability, primitive
    default-language: Haskell2010
    build-depends:    base ^>=4.18.3.0
    main-is:          generator.hs